Trace Travis failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
+os:
+  - linux
+  - osx
 language: perl
 perl:
   - "5.20"
   - "5.18"
   - "5.16"
   - "5.14"
+before_install:
+  - cpanm --installdeps --notest --verbose --no-interactive .
