--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,21 @@
+language: perl
 os:
   - linux
-  - osx
-language: perl
+  # - osx
+
 perl:
+  - "5.22"
   - "5.20"
   - "5.18"
   - "5.16"
   - "5.14"
+  - "5.12"
+
 before_install:
-  - sudo apt-get update -q
-  - sudo apt-get install -y sendmail
-  - cpanm --installdeps --notest --verbose --no-interactive .
+  cpanm -n Devel::Cover::Report::Coveralls Test::Script Test::Pod::Spelling::CommonMistakes Test::Portability::Files Test::Carp Test::Taint
+
+install:
+  - cpanm -v --installdeps --notest .
+
+script:
+  perl Makefile.PL && make && cover -test -report coveralls
