--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
       - run: perl -V
       - name: Install Dependencies
         run: |
-          cpanm -iqn --skip-satisfied File::Spec ExtUtils::MakeMaker Check::DevelBin
+          cpanm -iqn --skip-satisfied File::Spec ExtUtils::MakeMaker Devel::CheckBin
           cpanm -iqn --skip-satisfied Test::Pod::Spelling::CommonMistakes Test::Portability::Files Test::Compile Test::Pod::Coverage Test::Spelling::Comment
           cpanm -iqn --skip-satisfied --installdeps --notest .
       - name: Run Tests
