--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 /.build/
 _build/
 cover_db/
-inc/
 Build
 !Build/
 Build.bat
@@ -14,6 +13,10 @@ Build.bat
 /META.json
 /MYMETA.*
 nytprof.out
+inc
 /pm_to_blib
 *.o
 *.bs
+*.swp
+bblog/
+.test-script-*
