--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,7 @@
 ---
+# See https://github.com/actions/virtual-environments
+
+name: Test Code
 on:
   push:
     branches:
@@ -16,7 +19,7 @@ jobs:
           - macos-latest
           - ubuntu-18.04
           - ubuntu-20.04
-        perl: ['5.34', '5.32', '5.30', '5.28', '5.22']
+        perl: ['5.34', '5.32', '5.30', '5.28']
     name: Perl ${{ matrix.perl }} on ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v1
@@ -27,9 +30,9 @@ jobs:
       - run: perl -V
       - name: Install Dependencies
         run: |
-          cpanm -iqn --skip-satisfied File::Spec ExtUtils::MakeMaker Devel::CheckBin
+          cpanm -iqn --skip-satisfied File::Spec ExtUtils::MakeMaker Devel::CheckBin Test::Harness
           cpanm -iqn --skip-satisfied Test::Pod::Spelling::CommonMistakes Test::Portability::Files Test::Compile Test::Pod::Coverage Test::Spelling::Comment
-          cpanm -iqn --skip-satisfied --installdeps --notest .
+          cpanm -inv --skip-satisfied --installdeps --notest .
       - name: Run Tests
         run: prove -l -b t
         env:
